--- a/TD1_Second_Project.vcxproj.filters
+++ b/TD1_Second_Project.vcxproj.filters
@@ -125,6 +125,27 @@
     <Filter Include="System\Debug">
       <UniqueIdentifier>{a7381f03-938f-42f1-813a-1170f9e5ba9d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameObject\Player">
+      <UniqueIdentifier>{38b681bc-aff9-48e4-acae-46542e3385d4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Player\Main">
+      <UniqueIdentifier>{c3caae09-71a7-499d-ad10-b13ed93b65d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Player\State">
+      <UniqueIdentifier>{62af0861-f8b5-41d0-ba22-9903f05ecd0a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Player\State\Base">
+      <UniqueIdentifier>{8f8d77d2-b670-4a44-b37b-ad231f254e9c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Player\State\Wait">
+      <UniqueIdentifier>{66e9f93d-9a8b-4644-b01e-17291c7fe2c2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="System\Input\Mouse">
+      <UniqueIdentifier>{c5c7ae54-1890-401e-a504-efe57b078f53}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="System\Input\InoutDevice">
+      <UniqueIdentifier>{0388acd5-9528-411d-a0f8-1e319d18d9b1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C:\KamataEngine\DirectXGame\base\DirectXCommon.cpp">
@@ -190,6 +211,18 @@
     </ClCompile>
     <ClCompile Include="Debug.cpp">
       <Filter>System\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerMain.cpp">
+      <Filter>GameObject\Player\Main</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerStateWait.cpp">
+      <Filter>GameObject\Player\State\Wait</Filter>
+    </ClCompile>
+    <ClCompile Include="Mouse.cpp">
+      <Filter>System\Input\Mouse</Filter>
+    </ClCompile>
+    <ClCompile Include="InputDevice.cpp">
+      <Filter>System\Input\InoutDevice</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -372,6 +405,21 @@
     </ClInclude>
     <ClInclude Include="Debug.h">
       <Filter>System\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerMain.h">
+      <Filter>GameObject\Player\Main</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerStateBase.h">
+      <Filter>GameObject\Player\State\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerStateWait.h">
+      <Filter>GameObject\Player\State\Wait</Filter>
+    </ClInclude>
+    <ClInclude Include="Mouse.h">
+      <Filter>System\Input\Mouse</Filter>
+    </ClInclude>
+    <ClInclude Include="InputDevice.h">
+      <Filter>System\Input\InoutDevice</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
