--- a/TD1_Second_Project.vcxproj
+++ b/TD1_Second_Project.vcxproj
@@ -115,7 +115,6 @@
     <ClCompile Include="FadeStraightParticle.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PlayerMain.cpp" />
-    <ClCompile Include="PlayerStateWait.cpp" />
     <ClCompile Include="SizeComponent.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
@@ -176,8 +175,6 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleComponent.h" />
     <ClInclude Include="PlayerMain.h" />
-    <ClInclude Include="PlayerStateBase.h" />
-    <ClInclude Include="PlayerStateWait.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Animation.h" />
@@ -185,6 +182,9 @@
     <ClInclude Include="SizeComponent.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Vector2Math.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resource\text\map.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
