--- a/TD1_Second_Project.vcxproj
+++ b/TD1_Second_Project.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="C:\KamataEngine\DirectXGame\scene\GameScene.h" />
     <ClInclude Include="C:\KamataEngine\Adapter\Novice.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="ColorComponent.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="Effect.h" />
